fixed detail style when name is too long

--- a/app/components/detail/detail.css
+++ b/app/components/detail/detail.css
@@ -77,7 +77,7 @@
   margin-top: 2%;
 }
 .detail-all {
-  margin-top: 15% !important;
+  /* margin-top: 15% !important; */
   /*margin-bottom: 5%;*/
   margin-right: 30px;
   display: inline-block;
@@ -88,4 +88,9 @@
 
 .center {
   text-align: center;
+}
+
+.points-string-detail {
+  bottom: 5px;
+  margin-bottom: 0px;
 }
